5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1758_1580.log
== TEST (2019-05-28 11:13:26) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k])
		k = k + 1

media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- ERROR:
File "XXXX", line 22
    elif(max(x)!= x[k])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:00) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k])
		k = k + 1
		l = y[k]

media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(y)
-- ERROR:
File "XXXX", line 22
    elif(max(x)!= x[k])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:20) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[i])
		k = k + 1
		l = y[k]
   	i = i+1
media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(y)
-- ERROR:
File "XXXX", line 22
    elif(max(x)!= x[i])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:32) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:17:13) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:11) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:18:16) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(l)
-- EXECUTION TIME:
0.532152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 33, in <module>
    print(l)
NameError: name 'l' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:20) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = media/div
print(f)
print(p)
print(r)
print(n)
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:18:49) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(l)
-- EXECUTION TIME:
0.47943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 33, in <module>
    print(l)
NameError: name 'l' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:51) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:18:51) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(l)
-- EXECUTION TIME:
0.455192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 33, in <module>
    print(l)
NameError: name 'l' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:59) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[i]):
		k = k + 1
		l = y[k]
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(x[l:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:20:17) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:21:51) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))
o = 0
i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		o = o + 1
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[o:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:22:03) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))
o = 0
i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[k]):
		k = k + 1
		o = o + 1
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[o:])
-- EXECUTION TIME:
0.451744
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:38) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[i]):
		k = k + 1
		i = i + 1
		
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:51) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[i]):
		k = k + 1
		i = i + 1
		
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:24:34) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1
	elif(max(x)!= x[i]):
		k = k + 1
		i = i + 1
		
   	
media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- EXECUTION TIME:
0.434752
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
ALICE
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
CLARA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:23) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1

While(max(x)!= x[i]):
	k = k + 1
	i = i + 1

media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- ERROR:
File "XXXX", line 23
    While(max(x)!= x[i]):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:30) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1

while(max(x)!= x[i]):
	k = k + 1
	i = i + 1

media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:25) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
z = 0
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1

while(max(x)!= x[z]):
	k = k + 1
	z = z + 1

media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:28:07) 
-- CODE:
from numpy import*

x = array(eval(input("Notas dos alunos:")))
y = array(eval(input("Nomes dos alunos:")))

i = 0 #posição no vetor 
p = 0 #aprovados
f = 0 #faltas
r = 0 #alunos reprivados
m = max(x)
k = 0 #posição do numero maximo
z = 0
while(i < size(x)):
	if(x[i] == -1):
		f = f + 1
		i = i + 1
	elif(x[i] >= 6):
		p = p + 1
		i = i + 1
	elif(x[i]>=0 and x[i] < 6):
		r = r + 1
		i = i + 1

while(max(x)!= x[z]):
	k = k + 1
	z = z + 1

media = sum(x) + f
div = size(x) - f
n = round(media/div , 2)
print(f)
print(p)
print(r)
print(n)
print(y[k])
-- EXECUTION TIME:
0.437082
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
